fix attachment on mobile

--- a/src/sass/_attachment.scss
+++ b/src/sass/_attachment.scss
@@ -105,11 +105,12 @@
 			top: 50%;
 			left: 50%;
 			transform: translate(-50%, -50%);
-			font-size: 2em;
+			font-size: 1.2em;
 			text-align: center;
 
 			.fa {
 				font-size: 2em;
+				margin-bottom: 0.2em;
 			}
 		}
 	}
@@ -119,7 +120,7 @@
 	.error {
 		background: $default-color-error;
 		.text {
-			font-size: 1.5em;
+			font-size: 1.2em;
 		}
 	}
 
@@ -131,7 +132,7 @@
 	}
 
 	#attachmentCaptureImage {
-		padding: 60px;
+		padding: 20px;
 		height: 100%;
 
 		.image-upload {
@@ -156,7 +157,7 @@
 				top: 50%;
 				transform: translate(-50%,-50%);
 				color: $default-color-dark-cyan;
-				font-size: 30px;
+				font-size: 26px;
 				font-weight: 300;
 				user-select: none;
 				text-align: center;
